    and ndiswrapper utils:
    - check required utils_version attribute of currently installed
      ndiswrapper kernel module, use this version instead of latest version if
      called interactively
    - fallback to detection of latest API version when the information cannot
      be determined from the kernel module (not yet installed)

 -- Kel Modderman <kel@otaku42.de>  Wed, 28 May 2008 20:32:20 +1000

ndiswrapper (1.52-1) unstable; urgency=low

  * New upstream release.
  * Rewrite debian/rules as a debhelper-cetric Makefile, rather than a cdbs
    dependent Makefile fragment. [debian/control, debian/rules]
  * Drop spurious dependencies of 'gcc' for ndiswrapper-source,
    '${perl:Depends}' for ndiswrapper-utils-1.9 and '${shlibs:Depends},
    ${perl:Depends}' for ndiswrapper-common. They were never used.

 -- Kel Modderman <kel@otaku42.de>  Thu, 07 Feb 2008 23:15:29 +1000

ndiswrapper (1.51-1) unstable; urgency=low

  * New upstream release
  * update standards version to 3.7.3, no changes necessary.

 -- Kel Modderman <kel@otaku42.de>  Sun, 23 Dec 2007 00:20:49 +1000

ndiswrapper (1.50-1) unstable; urgency=low

  * New upstream release.
  * Fix tarball name in README.Debian,
    s/ndiswrapper-source.tar.bz2/ndiswrapper.tar.bz2/.
  * Use relative dirname in debian/ndiswrapper-source.dirs

 -- Kel Modderman <kel@otaku42.de>  Fri, 30 Nov 2007 22:15:20 +1000

ndiswrapper (1.49-1) unstable; urgency=low

  * New upstream release.

 -- Kel Modderman <kel@otaku42.de>  Tue, 30 Oct 2007 20:29:05 +1000

ndiswrapper (1.49~rc4-1) unstable; urgency=low

  * New upstream release candidate.
  * Support for Linux 2.6.23. (Closes: #446359)
  * Use Homepage: field of debian control instead of pseudo standard with
    double spacing and paragraph break for each binary package.
  * Drop debian/patches/kbuild-only.patch, applied upstream.
  * Fix DIST_DESTDIR target in debian/rules.modules to prevent installation of
    module to "odd" path. (Closes: #395081)