@@ -2,9 +2,8 @@ Source: ndiswrapper
 Section: misc
 Priority: optional
 Maintainer: Kel Modderman <kel@otaku42.de>
-Uploaders: Andres Salomon <dilinger@debian.org>
 Standards-Version: 3.7.3
-Build-Depends: debhelper (>= 5.0.37), bzip2
+Build-Depends: debhelper (>= 7), bzip2
 Vcs-Svn: svn://svn.berlios.de/fullstory/ndiswrapper/trunk
 Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/ndiswrapper/trunk/
 Homepage: http://ndiswrapper.sourceforge.net/
@@ -42,7 +41,7 @@ Description: Userspace utilities for the ndiswrapper Linux kernel module
 
 Package: ndiswrapper-source
 Architecture: all
-Depends: module-assistant, debhelper (>= 5.0.37), bzip2
+Depends: module-assistant, debhelper (>= 7), bzip2
 Suggests: kernel-package
 Description: Source for the ndiswrapper Linux kernel module
  Some vendors do not release specifications of the hardware or provide a
