@@ -2,8 +2,7 @@ Source: ndiswrapper
 Section: misc
 Priority: optional
 Maintainer: Kel Modderman <kel@otaku42.de>
-Uploaders: Andres Salomon <dilinger@debian.org>
-Build-Depends: debhelper (>= 5.0.37), bzip2
+Build-Depends: debhelper (>= 7), bzip2
 Standards-Version: 3.7.3
 
 Package: ndiswrapper-modules-_KVERS_
