@@ -3,17 +3,13 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-#include /usr/share/quilt/quilt.make
-
 build: build-indep build-arch
 
 build-indep: build-indep-stamp
-#build-indep-stamp: $(QUILT_STAMPFN)
 build-indep-stamp:
 	touch $@
 
 build-arch: build-arch-stamp
-#build-arch-stamp: $(QUILT_STAMPFN)
 build-arch-stamp:
 	dh_testdir
 	
@@ -21,7 +17,6 @@ build-arch-stamp:
 	
 	touch $@
 
-#clean: unpatch
 clean:
 	dh_testdir
 	dh_testroot
