@@ -12,8 +12,11 @@ ndiswrapper (1.53-1) UNRELEASED; urgency=low
       called interactively
     - fallback to detection of latest API version when the information cannot
       be determined from the kernel module (not yet installed)
+  * Remove dilinger from Uploaders as per his request.
+  * Remove commented out quilt related code from debian/rules.
+  * Bump debhelper compat level to 7, build-depend on debhelper >= 7.
 
- -- Kel Modderman <kel@otaku42.de>  Wed, 28 May 2008 20:32:20 +1000
+ -- Kel Modderman <kel@otaku42.de>  Wed, 28 May 2008 20:42:02 +1000
 
 ndiswrapper (1.52-1) unstable; urgency=low
 
